<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/group_news">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_markunread"
            android:title="@string/menu_aubacribe_news" />
    </group>

    <group android:id="@+id/group_category">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu" />
    </group>
    <group android:id="@+id/group_cart">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_add_cart"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/group_orders">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_view_orders"
            android:title="@string/menu_order" />
    </group>

    <group android:id="@+id/group_user">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_update_info" />
    </group>


    <group android:id="@+id/group_sign_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_ap"
            android:title="@string/sign_out" />
    </group>
</menu>
