<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:visibility="gone"
            android:id="@+id/input_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:hint="@string/enter_your_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fragment
            android:id="@+id/autocomplete_places_fragment_palce_order"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_address_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/your_address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorButton"
            android:padding="10dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autocomplete_places_fragment_palce_order"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:hint="@string/enter_your_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_address_details" />

        <TextView
            android:id="@+id/text_delivery_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/delivery_method"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_comment" />

        <RadioGroup
            android:id="@+id/radio_group_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_delivery_method">

            <RadioButton
                android:id="@+id/radio_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/home_address"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_other_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_address"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_ship_this_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ship_this_address"
                android:textSize="18sp" />


        </RadioGroup>

        <TextView
            android:id="@+id/text_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/payment_method"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_address" />

        <RadioGroup
            android:id="@+id/radio_group_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_payment_method">

            <RadioButton
                android:id="@+id/radio_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cash_on_delivery"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_braintree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/braintree"
                android:textSize="18sp" />


        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>