<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_update_cart_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:background="@color/colorWhite">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="22sp"
                    android:textColor="@color/colorButton"
                    android:padding="4dp"/>

                <RadioGroup
                    android:id="@+id/g_update_cart_size"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_update_cart_addon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:background="@color/colorWhite"
            android:layout_below="@id/card_update_cart_size">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addon"
                    android:textSize="22sp"
                    android:textColor="@color/colorButton"
                    android:padding="4dp"/>

                <ImageView
                    android:id="@+id/icon_update_cart_addon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_add_circle"
                    android:tint="@color/colorAccent"/>

            </LinearLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_selected_update_addon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linrar_update_cart_addon_size"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_cancel_update_cart_addon_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:padding="8dp"
                android:layout_margin="6dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>

            <Button
                android:id="@+id/btn_ok_update_cart_addon_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textColor="@color/colorWhite"
                android:padding="8dp"
                android:layout_margin="6dp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>